add update of articles

--- a/hexlet_django_blog/article/templates/article/index.html
+++ b/hexlet_django_blog/article/templates/article/index.html
@@ -1,9 +1,20 @@
 {% extends "base.html" %}
 
 {% block content %}
+
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+
     <h1>Список статей</h1>
+    <a href="{% url 'article:articles_create' %}">create new article</a>
     {% for article in articles %}
         <h2>{{ article.name }}</h2>
         <div>{{ article.body|slice:":200" }}</div>
+        <a href="{% url 'article:article_update' id=article.id %}">edit</a>
     {% endfor %}
 {% endblock %}
