--- a/hexlet_django_blog/templates/index.html
+++ b/hexlet_django_blog/templates/index.html
@@ -1,1 +1,7 @@
-<h1>Hello, {{ who }}!</h1>
+{% extends "base.html" %}
+
+{% block title %}Django blog{% endblock %}
+
+{% block content %}
+    <h1>Hexlet Django blog</h1>
+{% endblock %}
